# bootstrap

./: .gitignore  Cargo.toml  README.md  bootstrap_system_report.txt  error.txt  llms.md  report.txt  report2.txt  todo.txt
.github/workflows/: rust.yml
docs/: cursor_review_chat_and_bootstrap_code.md
layer_0/: flake.nix
layer_1/: flake.nix
layer_11/: flake.nix
layer_13/: flake.nix
layer_17/: flake.nix
layer_19/: flake.nix
layer_2/: flake.nix
layer_3/: flake.nix
layer_5/: flake.nix
layer_7/: flake.nix
src/: abbott_periodicity.rs  artifact.rs  bach.rs  bootstrap_system.rs  bott.rs  clifford.rs  emojistage.rs  escher.rs  euler.rs  fibonacci_stages.rs  function_number_linkage.rs  gauss.rs  generate_mains.rs  godel.rs  harmonic_lattice.rs  hash.rs  inference_quasifibers.rs  kernel.rs  lib.rs  mach.rs  main.rs  main01.rs  main02.rs  main03.rs  main04.rs  main05.rs  main06.rs  main07.rs  main08.rs  main09.rs  main10.rs  main11.rs  main12.rs  main13.rs  main14.rs  main15.rs  main16.rs  main17.rs  main18.rs  main19.rs  (+38 more)
src/clifford/: clifford_dyn_trait.rs  clifford_godel_trait.rs  clifford_multivector_constructors.rs  clifford_multivector_default.rs  clifford_multivector_dyn_impl.rs  clifford_multivector_impl.rs  clifford_multivector_struct.rs  clifford_trait.rs
src/emojistage/: calculate_resonance_frequency.rs  emoji_stage_display.rs  emoji_stage_enum.rs  emoji_stage_godel.rs  emoji_stage_impl.rs  get_factors.rs  is_fibonacci.rs  is_perfect_square.rs  is_prime.rs  stage_properties.rs
src/godel/: godel_dyn_trait.rs  simple_godel_number.rs
stage0/: API_REFERENCE.md  FLOW_STRUCTURE.md  MATHEMATICAL_FOUNDATIONS.md  README.md
stage0/src/: artifact.rs  hash.rs  kernel.rs  lib.rs  storage.rs  system.rs
stage1/: Cargo.toml
stage1/src/: dual.rs  lib.rs  mirror.rs  paired.rs  symmetry.rs
