[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"
description = "A minimal, self-contained bootstrap microkernel"
license = "AGPL-3.0"
authors = ["James Michael Dupont <h4@solfunmeme.com>"]
repository = "https://github.com/solfunmeme-dioxus"
keywords = ["microkernel", "bootstrap", "content-addressable"]
categories = ["system"]

[dependencies]
# Intentionally empty - zero dependencies for true bootstrap capability 
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
solfunmeme_clifford = { path = "../crates/solfunmeme_clifford" }
anyhow = "1.0"
sophia_api = { path = "../vendor/sophia_rs/api" }
sophia_inmem = { path = "../vendor/sophia_rs/inmem" }
sophia_iri = { path = "../vendor/sophia_rs/iri" }
sophia_turtle = { path = "../vendor/sophia_rs/turtle" }

[[bin]]
name = "stage0"
path = "src/bin/stage0.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "apply_example"
path = "src/bin/apply_example.rs"

[[bin]]
name = "phase_demo"
path = "src/bin/phase_demo.rs"

[[bin]]
name = "simple_phase_demo"
path = "src/bin/simple_phase_demo.rs"

[[bin]]
name = "standalone_phase_demo"
path = "src/bin/standalone_phase_demo.rs" 